2002-07-01  Derek Atkins   <derek@ihtfp.com>

	* gnc-html: convert URLType from enum to char*
	* gw-gnome-utils-spec: wrap URLType type, #defines, and gnc_build_url()
	* get the rest of the C code to use URLTypes properly

2002-06-29  David Hampton  <hampton@employees.org>

	* configure.in:
	* src/gnome/gnc-splash.c (gnc_show_splash_screen): Add the current
	version number (or cvs build time) to the splash screen.

2002-06-27  Derek Atkins   <derek@ihtfp.com>

	* Change the "Owner Report" to a "Customer Report" and "Vendor
	Report" Create a plug-in system to plug reports into the Register
	Window, keyed off of the account type and whether a split exists
	(for a "Transaction" report).  This required changes to the
	payables and receivables (aging) reports.

	* Tie the Customer and Vendor reports in, so you can bring up a
	Customer Report by selecting a transaction in an A/R account and
	clicking on Reports -> Transaction Report.

	* Create an "owner-report" which prints out a set of Invoice and
	Payment transactions and also an aging report for a single "owner"
	(e.g. Customer or Vendor).  This is still a first pass, so it
	might not be correct.  It uses Lots, but it assumes that the
	Account is periodically closed and re-opened (does not have a
	'start-date').  It still needs to be tied into the main GUI.

	* gncJob: add gncJobRetGUID() and gncJobLookupDirect()

	* gncOwner: add gncOwnerRetGUID()

	* gw-business-core-spec.scm: wrap GncAmountType, GncTaxIncluded
	GncBillTermType, gncInvoiceGetInvoiceFromLot(), gncJobRetGUID(),
	jobJobLookupDirect(), gncOwnerGetEndOwner(),
	gncOwnerGetOwnerFromLot(), gncOwnerRetGUID()

	* business-gnome.scm: add extensions to test the owner-report

	* business-options.scm: add an "owner" option-type

2002-06-25  Derek Atkins   <derek@ihtfp.com>

	* gncOwner.[ch]: Provide functions to store/lookup an owner in a
	Lot's kvp_frame.

	* gncInvoice.c: add implemention of GetPostedLot(); when posting